Fixed annotation text behind settings

--- a/src/css/realitybox-collab.scss
+++ b/src/css/realitybox-collab.scss
@@ -73,7 +73,7 @@ $background: whitesmoke;
 
 .guiElement {
   position: absolute;
-  z-index: 10;
+  z-index: 1;
   transform: translate(-50%, -50%);
 }
 
